[package]
name = "async-bson"
version = "0.2.0"
authors = ["mpihlak <martin.pihlak@gmail.com>"]
edition = "2018"

[features]
default = []
is_sync = ["maybe-async/is_sync"]

[dependencies]
tokio = { version="0.2", features=["io-util", "macros", "rt-core"] }
tracing = "0.1"
maybe-async = { version="0.2" }
byteorder = "1.3"
byteio = "0.2"

[dev-dependencies]
bson = '1.1'
