[package]
name = "async-bson"
version = "0.2.1"
authors = ["mpihlak <martin.pihlak@gmail.com>"]
edition = "2018"

[features]
default = [ "tokio/io-util", "tokio/macros", "tokio/rt-core" ]
is_sync = [ "maybe-async/is_sync", "byteorder" ]

[dependencies]
maybe-async = { version = "0.2" }
tokio = { version = "0.2", default-features = false, optional = true }
byteorder = { version = "1.3", optional = true }

[dev-dependencies]
bson = '1.1'
